# zk-noir-zero

./: AGENTS.md  output.txt  readme.md  resultados.md  test.sh
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
noir-bigint-bls12_381/: Nargo.toml
noir-bigint-bls12_381/src/: lib.nr  prime_field.nr
noir-bls-signature/: Nargo.toml
noir-bls-signature/src/: bls12_381.nr
noir-bls-signature/src/bls12_381/: fp12.nr  fp2.nr  fp6.nr  g2.nr  pairing.nr  signature.nr  swcurve.nr
noir-bls12-381-validator/: Nargo.toml  Prover.toml  Verifier.toml  run_bench.sh
noir-bls12-381-validator/src/: main.nr
rust-bls12-381-key-validator/: Cargo.toml  data.json  validation_results.json
rust-bls12-381-key-validator/src/: beacon_client.rs  bls_utils.rs  domain.rs  generate_noir_inputs.rs  get-api-status-request.rs  key-validator.rs  main.rs
